--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -80,14 +80,14 @@ header {
     color: #fff;
 }
 
-nav ul {
+header nav ul {
     display: flex;
     justify-content: space-between;
     min-width: 300px;
 
 }
 
-li {
+header li {
     display: inline;
     justify-content: space-between;
     padding: 1rem 2.5rem;
@@ -109,8 +109,33 @@ main {
     flex-direction: row;
 }
 
+main h1{
+    margin: 20px 0px 20px;
+    font-size: 75px;
+}
+
+main button{
+    margin: 20px 0px 20px;
+}
+
 img {
     margin: 30px;
+}
+
+button{
+    background-color: #b88725;
+    color: white;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 1rem 2.5rem;
+    border-radius: 30px;
+    transition: transform .4s;
+}
+
+button:hover{
+    transform: scale(1.2);
+    cursor: pointer;
 }
 
 .justify-center{
@@ -129,11 +154,54 @@ img {
     background-size:cover;
     background-position-y: 175px ;
 }
+
+.hello{
+    position: absolute;
+    top:50%;
+    left: 8%;
+}
+
 .about {
     display: flex;
     padding: 15px;
     background-color: antiquewhite;
+    height: 100vh;
+    align-items: top;
+    justify-content: center;
+    padding: 8%;
 }
+
+.about h2{
+  font-size: 75px;
+}
+
+.about li{
+    text-decoration: underline;
+    color: white;
+    background-color: #181818;
+    display: block;
+    justify-content: space-between;
+    padding: 1rem 2.5rem;
+    margin: 1rem;
+    font-size: 2.5rem;
+    font-weight: 700;
+}
+.hide{
+    display: none;
+}
+
+.about li:hover {
+    color: #b88725;
+    transition: 1s;
+    }
+
+.about li:hover + .hide{
+display: block;
+transition: 1s;
+}
+
+
+
 
 .work {
     display: flex;
